
*HAVP 0.87 released
 - DrWeb scanner support
 - F-Prot support for v6.0 added (also check FPROTOPTIONS)
 - If false, X_FORWARDED_FOR drops also Via: header for privacy
 - Fix Avast and AVG bugs
 - Templates support <!--url--> and <!--clientip--> tags
 - Uses supplementary groups for user if defined
 - Added TRICKLINGBYTES config
 - Reduced *MAXFILES settings to 50 for performance
 - Add missing HTTP methods (MKACTIVITY, CHECKOUT, MERGE) 

*HAVP 0.86 released
 - Experimental support for chunked Transfer-Encoding, fixes some broken sites
 - Added IGNOREVIRUS config for whitelisting virus names
 - Added CLAMBLOCKBROKEN config
 - Improve detection with AVG, only Viruses were found, not Trojans etc
 - HAVP is killed if database reloading fails for Library Scanner
 - Log URL when crashed scanner process detected, for troubleshooting
 - Build system updated (--prefix --sbindir --sysconfdir --localstatedir)

*HAVP 0.85 released
 - Added support for ClamAV 0.90 library
   (once compiled for it, older library versions not supported)

*HAVP 0.84 released
 - Fix bug in tcp buffer, requests could leak to other clients sometimes
 - Support for Arcavir scanner
 - Support for multiple IPs in hostnames, all are tried if necessary
 - Pass Proxy-Authorization header to parent proxy (thanks Mateus)
 - Ignore scanner errors if MAXSCANSIZE reached (thanks Vittorio)
 - Build system polished a bit (--prefix supported)
 - Added support for old NOD32 scanner (set NOD32VERSION in config)
 - Default for MAXSCANSIZE 5000000, not suggested to be 0 anymore

*HAVP 0.83 released
 - Allow Accept-Encoding header so HTTP compression works
 - Workaround for some ClamAV mmap() troubles (affected BinHex and PDF)

*HAVP 0.82 released
 - Improved ZIP handling (header pre-fetch, scans ZIPs larger than MAXSCANSIZE)
 - Added SCANIMAGES config
 - Ignore RAR errors from clamd
 - Fixes to HTTP header handling
 - Added syslog logging option
 - Signal HUP re-opens logfiles, making rotation possible
