@@ -19,7 +19,7 @@
 #ifndef DEFAULT_H
 #define DEFAULT_H
 
-#define VERSION "0.87"
+#define VERSION "0.88"
 
 //##############################################################
 //Define if you want to rewrite a URL
@@ -34,11 +34,11 @@
  "KEEPBACKTIME","TRICKLING","TRICKLINGBYTES","MAXSCANSIZE","WHITELIST","BLACKLIST","PIDFILE", \
  "DAEMON","TRANSPARENT","LOG_OKS","ACCESSLOG","ERRORLOG","LOGLEVEL", \
  "USESYSLOG","SYSLOGNAME","SYSLOGFACILITY","SYSLOGLEVEL","IGNOREVIRUS", \
- "DISPLAYINITIALMESSAGES","DBRELOAD","SCANTEMPFILE","TEMPLATEPATH", \
+ "DISPLAYINITIALMESSAGES","DBRELOAD","SCANTEMPFILE","TEMPLATEPATH","DISABLELOCKINGFOR", \
  "PARENTPROXY","PARENTPORT","MAXSERVERS","FORWARDED_IP","X_FORWARDED_FOR","FAILSCANERROR", \
  "MAXDOWNLOADSIZE","SCANNERTIMEOUT","STREAMUSERAGENT","STREAMSCANSIZE","SCANIMAGES", \
  "ENABLECLAMLIB","CLAMDBDIR","CLAMBLOCKBROKEN","CLAMBLOCKMAX","CLAMBLOCKENCRYPTED", \
- "CLAMMAXFILES","CLAMMAXFILESIZE","CLAMMAXRECURSION","CLAMMAXRATIO", \
+ "CLAMMAXFILES","CLAMMAXFILESIZE","CLAMMAXRECURSION","CLAMMAXRATIO","CLAMMAXSCANSIZE", \
  "ENABLEAVG","AVGSERVER","AVGPORT", \
  "ENABLEAVESERVER","AVESOCKET", \
  "ENABLEFPROT","FPROTSERVER","FPROTPORT","FPROTOPTIONS", \
@@ -47,7 +47,7 @@
  "ENABLECLAMD","CLAMDSOCKET","CLAMDSERVER","CLAMDPORT", \
  "ENABLESOPHIE","SOPHIESOCKET", \
  "ENABLEAVAST","AVASTSOCKET","AVASTSERVER","AVASTPORT", \
- "ENABLEARCAVIR","ARCAVIRSOCKET", \
+ "ENABLEARCAVIR","ARCAVIRSOCKET","ARCAVIRVERSION", \
  "ENABLEDRWEB","DRWEBSOCKET","DRWEBSERVER","DRWEBPORT","DRWEBHEURISTIC","DRWEBMALWARE"
 //SCANNERS
 
@@ -90,7 +90,7 @@
 #define MAXSCANTEMPFILELENGTH 200
 
 //Maximum length of http headers
-#define MAXHTTPHEADERLENGTH 20480
+#define MAXHTTPHEADERLENGTH 40960
 
 // HTML Error String
 #define ERROR_DNS	"dns.html"
