@@ -24,6 +24,7 @@
 #include <deque>
 #include <iostream>
 #include <fstream>
+#include <cstdlib>
 
 extern URLList Whitelist;
 extern URLList Blacklist;
@@ -492,7 +493,7 @@ int ProxyHandler::CommunicationHTTP( ScannerHandler &Scanners, bool ScannerOff )
         return 0;
     }
 
-    if ( (ContentLengthReference > 0) && (ContentLengthReference < 10) )
+    if ( (ContentLengthReference > 0) && (ContentLengthReference < 25) )
     {
         //Forget scanning for tiny files
         ScannerOff = true;
@@ -684,9 +685,16 @@ int ProxyHandler::CommunicationHTTP( ScannerHandler &Scanners, bool ScannerOff )
         }
 
 #ifndef NOMAND
-        //Check if we need to work around ClamAV mmap() handling
+        //Check if we need to work around ClamAV mmap() handling (for example)
         //These can fail if trying to scan locked file: BinHex, PDF
-        if ( MatchBegin( BodyTemp, "(This file", 10 ) || MatchBegin( BodyTemp, "%PDF-", 5 ) )
+        //Also Zip files for 0.93
+        if ( (DontLockBINHEX && MatchBegin( BodyTemp, "(This file", 10 )) ||
+             (DontLockPDF && MatchBegin( BodyTemp, "%PDF-", 5 )) ||
+             (DontLockZIP &&
+                 (MatchBegin( BodyTemp, "PK\003\004", 4 ) ||
+                  MatchBegin( BodyTemp, "PK00PK\003\004", 8))
+             )
+           )
         {
             //No partial unlock
             PartlyUnlock = false;
@@ -1586,6 +1594,15 @@ ProxyHandler::ProxyHandler()
     KeepBackBuffer = Params::GetConfigInt("KEEPBACKBUFFER");
 
     Header.reserve(20000);
+
+    string DontLock = UpperCase( Params::GetConfigString("DISABLELOCKINGFOR") );
+    DontLockBINHEX = DontLockPDF = DontLockZIP = false;
+    if ( Params::GetConfigBool("ENABLECLAMLIB") || Params::GetConfigBool("ENABLECLAMD") )
+    {
+        if ( MatchSubstr( DontLock, "CLAMAV:BINHEX", -1 ) ) DontLockBINHEX = true;
+        if ( MatchSubstr( DontLock, "CLAMAV:PDF", -1 ) ) DontLockPDF = true;
+        if ( MatchSubstr( DontLock, "CLAMAV:ZIP", -1 ) ) DontLockZIP = true;
+    }
 }
 
 
